--- a/reclinks-styles.css
+++ b/reclinks-styles.css
@@ -28,4 +28,79 @@ button.votelink {
 .votelink.votelink-minus:hover { background-position: -28px -14px; }
 .votelink.votelink-plus:hover { background-position: -42px -14px; }
 
+/* Bookmarklet default styles */
+
+.reclinks-bookmarklet {
+	margin: 20px 0;
+	position: relative;
+}
+
+.reclinks-bookmarklet a {
+	display: inline-block;
+	padding-right: 12px;
+	position: relative;
+	cursor: move;
+	color: #333;
+	background: #dfdfdf;
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.07, rgb(230,230,230)),
+		color-stop(0.77, rgb(216,216,216))
+	);
+	background-image: -moz-linear-gradient(
+		center bottom,
+		rgb(230,230,230) 7%,
+		rgb(216,216,216) 77%
+	);
+	background-repeat: no-repeat;
+	background-image-position: 10px 8px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px #b4b4b4 solid;
+	font-style: normal;
+	line-height: 16px;
+	font-size: 14px;
+	text-decoration: none;
+	text-shadow: #fff 0 1px 0px;
+}
+
+.reclinks-bookmarklet a:hover,
+.reclinks-bookmarklet a:active {
+	color: #333
+}
+
+.reclinks-bookmarklet a:hover:after {
+	transform: skew(20deg) rotate(9deg);
+	-webkit-transform: skew(20deg) rotate(9deg);
+	-moz-transform: skew(20deg) rotate(9deg);
+	box-shadow: 0 10px 8px rgba(0, 0, 0, 0.7);
+	-webkit-box-shadow: 0 10px 8px rgba(0, 0, 0, 0.7);
+	-moz-box-shadow: 0 10px 8px rgba(0, 0, 0, 0.7);
+}
+
+.reclinks-bookmarklet a span {
+	background: url(../../../wp-admin/images/press-this.png) no-repeat -45px 5px ;
+	padding: 8px 8px 8px 32px;
+	display: inline-block;
+}
+
+.reclinks-bookmarklet a:after {
+	content: '';
+	width: 70%;
+	height: 55%;
+	z-index: -1;
+	position: absolute;
+	right: 10px;
+	bottom: 9px;
+	background: transparent;
+	transform: skew(20deg) rotate(6deg);
+	-webkit-transform: skew(20deg) rotate(6deg);
+	-moz-transform: skew(20deg) rotate(6deg);
+	box-shadow: 0 10px 8px rgba(0, 0, 0, 0.6);
+	-webkit-box-shadow: 0 10px 8px rgba(0, 0, 0, 0.6);
+	-moz-box-shadow: 0 10px 8px rgba(0, 0, 0, 0.6);
+}
+
 .reclink-favicon { vertical-align: middle; }
